# necker

./: .gitignore  CLAUDE.md  README.md  TODO.md  app-architecture.md  categorization.py  config.py  logger.py  main.py  pyproject.toml
.claude/: settings.json
.claude/commands/: implement.md  reset.md  spec.md
.github/workflows/: test.yml
app/: __init__.py  app.py
app/api/: __init__.py  routes.py
app/templates/: base.html
app/ui/: __init__.py  routes.py
cli/: __main__.py  accounts.py  backup.py  budgets.py  categories.py  migrate.py  output.py  outputs.py  reports.py  server.py  transactions.py
db/: manager.py
db/migrations/: 001_create_accounts_table.sql  002_create_data_imports_table.sql  002_create_transactions_table.sql  003_create_categories_table.sql  003_create_transactions_table.sql  004_create_transactions_table.sql  (+8 more)
ingestion/: __init__.py  amex.py  bofa.py  bofacc.py  chase.py  discover.py
llm/: __init__.py  factory.py
models/: account.py  budget.py  category.py  data_import.py  reports.py  transaction.py
reports/: __init__.py  _aggregation.py  accrual_spending_summary.py  cash_spending_summary.py  month_transactions.py
repositories/: accounts.py  budgets.py  categories.py  data_imports.py  transactions.py
scripts/: __init__.py  build-css.sh  reset.py
services/: accounts.py  analysis.py  base.py  categories.py  categorization.py  data_imports.py  ingestion.py  transactions.py
tests/: conftest.py  helpers.py  test_api.py  test_app.py  test_budget_api.py  test_config.py  test_ui.py
tools/: __init__.py  transactions.py
(+52 files in other folders)
